v0.7.x/_sources/reference/fury.ui.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`ui`
=========
.. automodule:: fury.ui

.. currentmodule:: fury.ui
.. autosummary::

   Button2D
   Checkbox
   ComboBox2D
   Disk2D
   FileMenu2D
   GridUI
   ImageContainer2D
   LineDoubleSlider2D
   LineSlider2D
   ListBox2D
   ListBoxItem2D
   Option
   Panel2D
   RadioButton
   RangeSlider
   Rectangle2D
   RingSlider2D
   TabPanel2D
   TabUI
   TextBlock2D
   TextBox2D

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.containers`
----------------------------
.. automodule:: fury.ui.containers

.. currentmodule:: fury.ui.containers
.. autosummary::

   GridUI
   ImageContainer2D
   Panel2D
   Rectangle2D
   TabPanel2D
   TabUI
   TextBlock2D
   UI
   grid
   load_image
   rotate
   set_input

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.core`
----------------------
.. automodule:: fury.ui.core

.. currentmodule:: fury.ui.core
.. autosummary::

   Button2D
   CustomInteractorStyle
   Disk2D
   Rectangle2D
   TextBlock2D
   UI
   load_image
   set_input
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.elements`
--------------------------
.. automodule:: fury.ui.elements

.. currentmodule:: fury.ui.elements
.. autosummary::

   Button2D
   Checkbox
   ComboBox2D
   Disk2D
   FileMenu2D
   LineDoubleSlider2D
   LineSlider2D
   ListBox2D
   ListBoxItem2D
   Number
   Option
   OrderedDict
   Panel2D
   RadioButton
   RangeSlider
   Rectangle2D
   RingSlider2D
   TextBlock2D
   TextBox2D
   UI
   clip_overflow
   read_viz_icons

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.helpers`
-------------------------
.. automodule:: fury.ui.helpers

.. currentmodule:: fury.ui.helpers
.. autosummary::

   check_overflow
   clip_overflow
   wrap_overflow


.. currentmodule:: fury.ui


:class:`Button2D`
~~~~~~~~~~~~~~~~~


.. autoclass:: Button2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Checkbox`
~~~~~~~~~~~~~~~~~


.. autoclass:: Checkbox
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ComboBox2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ComboBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Disk2D`
~~~~~~~~~~~~~~~


.. autoclass:: Disk2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FileMenu2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FileMenu2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GridUI`
~~~~~~~~~~~~~~~


.. autoclass:: GridUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageContainer2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageContainer2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineDoubleSlider2D`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineDoubleSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBoxItem2D`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBoxItem2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Option`
~~~~~~~~~~~~~~~


.. autoclass:: Option
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Panel2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Panel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RadioButton`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RadioButton
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RangeSlider`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RangeSlider
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RingSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RingSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabPanel2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: TabPanel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabUI`
~~~~~~~~~~~~~~


.. autoclass:: TabUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: fury.ui.containers


:class:`GridUI`
~~~~~~~~~~~~~~~


.. autoclass:: GridUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageContainer2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageContainer2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Panel2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Panel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabPanel2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: TabPanel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabUI`
~~~~~~~~~~~~~~


.. autoclass:: TabUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UI`
~~~~~~~~~~~


.. autoclass:: UI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

grid
~~~~

.. autofunction:: grid

load_image
~~~~~~~~~~

.. autofunction:: load_image

rotate
~~~~~~

.. autofunction:: rotate

set_input
~~~~~~~~~

.. autofunction:: set_input


.. currentmodule:: fury.ui.core


:class:`Button2D`
~~~~~~~~~~~~~~~~~


.. autoclass:: Button2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CustomInteractorStyle`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CustomInteractorStyle
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Disk2D`
~~~~~~~~~~~~~~~


.. autoclass:: Disk2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UI`
~~~~~~~~~~~


.. autoclass:: UI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_image
~~~~~~~~~~

.. autofunction:: load_image

set_input
~~~~~~~~~

.. autofunction:: set_input

warn
~~~~

.. autofunction:: warn


.. currentmodule:: fury.ui.elements


:class:`Button2D`
~~~~~~~~~~~~~~~~~


.. autoclass:: Button2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Checkbox`
~~~~~~~~~~~~~~~~~


.. autoclass:: Checkbox
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ComboBox2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ComboBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Disk2D`
~~~~~~~~~~~~~~~


.. autoclass:: Disk2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FileMenu2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FileMenu2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineDoubleSlider2D`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineDoubleSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBoxItem2D`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBoxItem2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Number`
~~~~~~~~~~~~~~~


.. autoclass:: Number
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Option`
~~~~~~~~~~~~~~~


.. autoclass:: Option
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OrderedDict`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OrderedDict
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Panel2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Panel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RadioButton`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RadioButton
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RangeSlider`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RangeSlider
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RingSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RingSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UI`
~~~~~~~~~~~


.. autoclass:: UI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

clip_overflow
~~~~~~~~~~~~~

.. autofunction:: clip_overflow

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons


.. currentmodule:: fury.ui.helpers

check_overflow
~~~~~~~~~~~~~~

.. autofunction:: check_overflow

clip_overflow
~~~~~~~~~~~~~

.. autofunction:: clip_overflow

wrap_overflow
~~~~~~~~~~~~~

.. autofunction:: wrap_overflow

