v0.8.0/_sources/reference/fury.ui.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`ui`
=========
.. automodule:: fury.ui

.. currentmodule:: fury.ui
.. autosummary::

   Button2D
   Checkbox
   ComboBox2D
   Disk2D
   DrawPanel
   DrawShape
   FileMenu2D
   GridUI
   ImageContainer2D
   LineDoubleSlider2D
   LineSlider2D
   ListBox2D
   ListBoxItem2D
   Option
   Panel2D
   PlaybackPanel
   RadioButton
   RangeSlider
   Rectangle2D
   RingSlider2D
   TabPanel2D
   TabUI
   TextBlock2D
   TextBox2D

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.containers`
----------------------------
.. automodule:: fury.ui.containers

.. currentmodule:: fury.ui.containers
.. autosummary::

   CellArray
   FloatArray
   GridUI
   ImageContainer2D
   Panel2D
   Points
   PolyData
   PolyDataMapper2D
   Property2D
   Rectangle2D
   TabPanel2D
   TabUI
   TextBlock2D
   Texture
   TexturedActor2D
   UI
   grid
   load_image
   rotate
   set_input

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.core`
----------------------
.. automodule:: fury.ui.core

.. currentmodule:: fury.ui.core
.. autosummary::

   Actor2D
   Button2D
   CellArray
   CustomInteractorStyle
   Disk2D
   DiskSource
   FloatArray
   Points
   PolyData
   PolyDataMapper2D
   Polygon
   Property2D
   Rectangle2D
   TextActor
   TextBlock2D
   Texture
   TexturedActor2D
   UI
   load_image
   set_input
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.elements`
--------------------------
.. automodule:: fury.ui.elements

.. currentmodule:: fury.ui.elements
.. autosummary::

   Button2D
   Checkbox
   ComboBox2D
   Command
   Disk2D
   DrawPanel
   DrawShape
   FileMenu2D
   LineDoubleSlider2D
   LineSlider2D
   ListBox2D
   ListBoxItem2D
   Number
   Option
   OrderedDict
   Panel2D
   PlaybackPanel
   RadioButton
   RangeSlider
   Rectangle2D
   RingSlider2D
   TextBlock2D
   TextBox2D
   UI
   cal_bounding_box_2d
   clip_overflow
   read_viz_icons
   rotate_2d
   set_polydata_vertices
   update_actor
   vertices_from_actor

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`ui.helpers`
-------------------------
.. automodule:: fury.ui.helpers

.. currentmodule:: fury.ui.helpers
.. autosummary::

   cal_bounding_box_2d
   check_overflow
   clip_overflow
   rotate_2d
   wrap_overflow


.. currentmodule:: fury.ui


:class:`Button2D`
~~~~~~~~~~~~~~~~~


.. autoclass:: Button2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Checkbox`
~~~~~~~~~~~~~~~~~


.. autoclass:: Checkbox
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ComboBox2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ComboBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Disk2D`
~~~~~~~~~~~~~~~


.. autoclass:: Disk2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DrawPanel`
~~~~~~~~~~~~~~~~~~


.. autoclass:: DrawPanel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DrawShape`
~~~~~~~~~~~~~~~~~~


.. autoclass:: DrawShape
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FileMenu2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FileMenu2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GridUI`
~~~~~~~~~~~~~~~


.. autoclass:: GridUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageContainer2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageContainer2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineDoubleSlider2D`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineDoubleSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBoxItem2D`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBoxItem2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Option`
~~~~~~~~~~~~~~~


.. autoclass:: Option
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Panel2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Panel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PlaybackPanel`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PlaybackPanel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RadioButton`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RadioButton
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RangeSlider`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RangeSlider
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RingSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RingSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabPanel2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: TabPanel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabUI`
~~~~~~~~~~~~~~


.. autoclass:: TabUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: fury.ui.containers


:class:`CellArray`
~~~~~~~~~~~~~~~~~~


.. autoclass:: CellArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FloatArray`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FloatArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GridUI`
~~~~~~~~~~~~~~~


.. autoclass:: GridUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageContainer2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageContainer2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Panel2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Panel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Points`
~~~~~~~~~~~~~~~


.. autoclass:: Points
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyData`
~~~~~~~~~~~~~~~~~


.. autoclass:: PolyData
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyDataMapper2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyDataMapper2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Property2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: Property2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabPanel2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: TabPanel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TabUI`
~~~~~~~~~~~~~~


.. autoclass:: TabUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Texture`
~~~~~~~~~~~~~~~~


.. autoclass:: Texture
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TexturedActor2D`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TexturedActor2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UI`
~~~~~~~~~~~


.. autoclass:: UI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

grid
~~~~

.. autofunction:: grid

load_image
~~~~~~~~~~

.. autofunction:: load_image

rotate
~~~~~~

.. autofunction:: rotate

set_input
~~~~~~~~~

.. autofunction:: set_input


.. currentmodule:: fury.ui.core


:class:`Actor2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Actor2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Button2D`
~~~~~~~~~~~~~~~~~


.. autoclass:: Button2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CellArray`
~~~~~~~~~~~~~~~~~~


.. autoclass:: CellArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CustomInteractorStyle`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CustomInteractorStyle
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Disk2D`
~~~~~~~~~~~~~~~


.. autoclass:: Disk2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiskSource`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiskSource
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FloatArray`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FloatArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Points`
~~~~~~~~~~~~~~~


.. autoclass:: Points
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyData`
~~~~~~~~~~~~~~~~~


.. autoclass:: PolyData
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyDataMapper2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyDataMapper2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Polygon`
~~~~~~~~~~~~~~~~


.. autoclass:: Polygon
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Property2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: Property2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextActor`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TextActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Texture`
~~~~~~~~~~~~~~~~


.. autoclass:: Texture
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TexturedActor2D`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TexturedActor2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UI`
~~~~~~~~~~~


.. autoclass:: UI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_image
~~~~~~~~~~

.. autofunction:: load_image

set_input
~~~~~~~~~

.. autofunction:: set_input

warn
~~~~

.. autofunction:: warn


.. currentmodule:: fury.ui.elements


:class:`Button2D`
~~~~~~~~~~~~~~~~~


.. autoclass:: Button2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Checkbox`
~~~~~~~~~~~~~~~~~


.. autoclass:: Checkbox
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ComboBox2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ComboBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Command`
~~~~~~~~~~~~~~~~


.. autoclass:: Command
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Disk2D`
~~~~~~~~~~~~~~~


.. autoclass:: Disk2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DrawPanel`
~~~~~~~~~~~~~~~~~~


.. autoclass:: DrawPanel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DrawShape`
~~~~~~~~~~~~~~~~~~


.. autoclass:: DrawShape
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FileMenu2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FileMenu2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineDoubleSlider2D`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineDoubleSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBoxItem2D`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBoxItem2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Number`
~~~~~~~~~~~~~~~


.. autoclass:: Number
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Option`
~~~~~~~~~~~~~~~


.. autoclass:: Option
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OrderedDict`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OrderedDict
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Panel2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Panel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PlaybackPanel`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PlaybackPanel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RadioButton`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RadioButton
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RangeSlider`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RangeSlider
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RingSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RingSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UI`
~~~~~~~~~~~


.. autoclass:: UI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

cal_bounding_box_2d
~~~~~~~~~~~~~~~~~~~

.. autofunction:: cal_bounding_box_2d

clip_overflow
~~~~~~~~~~~~~

.. autofunction:: clip_overflow

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons

rotate_2d
~~~~~~~~~

.. autofunction:: rotate_2d

set_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_vertices

update_actor
~~~~~~~~~~~~

.. autofunction:: update_actor

vertices_from_actor
~~~~~~~~~~~~~~~~~~~

.. autofunction:: vertices_from_actor


.. currentmodule:: fury.ui.helpers

cal_bounding_box_2d
~~~~~~~~~~~~~~~~~~~

.. autofunction:: cal_bounding_box_2d

check_overflow
~~~~~~~~~~~~~~

.. autofunction:: check_overflow

clip_overflow
~~~~~~~~~~~~~

.. autofunction:: clip_overflow

rotate_2d
~~~~~~~~~

.. autofunction:: rotate_2d

wrap_overflow
~~~~~~~~~~~~~

.. autofunction:: wrap_overflow

